JADE heartbeat works, and assignment of cameras to goals

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
             <version>3.10.1</version>
